--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Recipe App" />
+    <meta
+      property="og:description"
+      content="Explore amazing recipes, check ingredients, and discover new dishes to cook today. Find inspiration for your next meal in seconds."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://the-recipe-app.vercel.app/" />
+    <meta
+      property="og:image"
+      content="https://the-recipe-app.vercel.app/assets/logo-BRfMdWqy.webp"
+   
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://the-recipe-app.vercel.app/" />
+    <meta
+      property="og:image"
+      content="https://the-recipe-app.vercel.app/assets/logo-BRfMdWqy.webp"
+    />
     <title>Recipe App</title>
   </head>
   <body>
